--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
 		"illuminate/support": "5.0.*"
 	},
 	"autoload": {
+		"classmap": [
+			"src/controllers",
+			"src/database/migrations",
+			"src/database/seeds"
+		],
 		"psr-4": {
 			"Isabry\\Laradmin\\": "src/"
 		},
